--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
   <head>
     <title>Pong</title>
     <link rel="stylesheet" href="index.css">
+    <meta name="viewport" content="width= user-scalable=no">
     <script src="ball.js"></script>
     <script src="player.js"></script>
   </head>
   <body>
     <canvas id=gameCanvas height = 800 width = 1280></canvas>
-    <script src="Index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
