Finished the First Prototype

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Pong</title>
     <link rel="stylesheet" href="index.css">
+    <script src="lib.js"></script>
     <script src="ball.js"></script>
     <script src="player.js"></script>
   </head>
