--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
     <title>Pong</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="index.css">
     <script src="lib.js"></script>
-    <script src="ball.js"></script>
-    <script src="player.js"></script>
+    <script src="primary.js"></script>
   </head>
   <body>
-    <canvas id=gameCanvas height = 800 width = 1280></canvas>
+    <canvas id=gameCanvas></canvas>
     <script src="index.js"></script>
   </body>
 </html>
