--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <title>Pong</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="description" content="A simple game of pong"/>
+    <meta name="title" content="Pong"/>
     <link rel="stylesheet" href="index.css">
     <script src="lib.js"></script>
     <script src="primary.js"></script>
