Broken Multiplayer Added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
   <head>
     <title>Pong</title>
     <meta name="description" content="A simple game of pong"/>
-    <meta name="title" content="Pong"/>
+    <meta name="author" content="CEbbinghaus">
+    <meta name="theme-color" content="#ed6868"/>
+    <meta name="og:title" content="Pong">
+    <meta name="og:description" content="A Simple game of Pong">
+    <meta name="og:image" content="./index.png">
     <link rel="stylesheet" href="index.css">
     <script src="lib.js"></script>
     <script src="primary.js"></script>
